<resources>
    <string name="app_name">Android Quiz</string>
    <string name="q1">Q1</string>
    <string name="which_variable_type_would_you_use_for_a_city_name">Which variable type would you use for a city name?</string>
    <string name="which_from_the_coices_is_a_layout">Which from the choices could be considered as a layout?</string>
    <string name="q2">Q2</string>
    <string name="q3">Q3</string>
    <string name="write_below_how_to_declare_int_variable_called_quantity">Write below how to declare int variable called quantity?</string>
    <string name="q4">Q4</string>
    <string name="what_is_the_right_declration_to_write_a_method_called_jump">what is the right declration to write a method called jump?</string>
    <string name="shwo_score">Show Score</string>
    <string name="start_the_test">Start the Test</string>
    <string name="choose_what_represents_a_premetive_data_type_in_java_from_these_choices_choose_multiple_choise">Choose what represents a premetive data type in java from these choices(choose multiple choise)</string>
    <string name="your_score_is_0">Your Score is : 0</string>
</resources>
